<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:background="@color/homeBgColor"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/header_txtvw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp30"
        android:gravity="center"
        android:text="@string/lbl_nano_apps"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/black" />


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/dp40"
        android:layout_marginRight="@dimen/dp40"
        android:orientation="vertical">

        <android.support.v7.widget.CardView style="@style/home_card">

            <Button
                android:id="@+id/home_spotify_btnvw"
                style="@style/home_button"
                android:text="@string/btn_spotify_streaner"

                />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/home_card">

            <Button
                android:id="@+id/home_scores_btnvw"
                style="@style/home_button"
                android:text="@string/btn_score_app"

                />
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView style="@style/home_card">

            <Button
                android:id="@+id/home_library_btnvw"
                style="@style/home_button"
                android:text="@string/btn_library_app"

                />
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView style="@style/home_card">

            <Button
                android:id="@+id/home_build_it_btnvw"
                style="@style/home_button"
                android:text="@string/btn_build_it"

                />
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView style="@style/home_card">

            <Button
                android:id="@+id/home_xyz_btnvw"
                style="@style/home_button"
                android:text="@string/btn_xyz_reader"

                />
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            style="@style/home_card"
            app:cardBackgroundColor="@color/homeBtnColorRed"
            >

            <Button
                android:id="@+id/home_capstone_btnvw"
                style="@style/home_button"
                android:textColor="@android:color/white"
                android:text="@string/btn_capstone"

                />
        </android.support.v7.widget.CardView>


    </LinearLayout>

</RelativeLayout>
